Fri May  7 08:51:02 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/examples/Quoter/Broker/Broker.idl:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.h:
        * connectors/dds4ccm/examples/Quoter/Broker/Broker_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/Connector/Quoter_Connector.idl:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor.idl:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.h:
        * connectors/dds4ccm/examples/Quoter/Distributor/Distributor_exec.cpp:
        * connectors/dds4ccm/examples/Quoter/descriptors/Plan.cdp:
          Instantiate the Typed CCM_DDS module inside the Quoter module, this
          way the IDL type and all CCM_DDS typed interfaces are all in the
          Quoter module.

Thu May  6 18:16:12 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_ts_default.mpb:
          Reverted change from Abdul, it breaks svn head with ndds

Thu May  6 14:34:22 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:

          Added a test case where an instantiated template module
          reopens a pre-existing module, which is legal IDL but was
          causing a bogus redefinition error (now fixed).

Thu May  6 12:21:20 UTC 2010  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        * connectors/ami4ccm/tests/InterReturn
        * connectors/ami4ccm/tests/InterReturn/Base
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.idl
        * connectors/ami4ccm/tests/InterReturn/Base/InterReturnT.mpc
        * connectors/ami4ccm/tests/InterReturn/descriptors
        * connectors/ami4ccm/tests/InterReturn/descriptors/Plan.cdp
        * connectors/ami4ccm/tests/InterReturn/descriptors/run_test.pl
        * connectors/ami4ccm/tests/InterReturn/Receiver